# mcp-pappers

./: .env.example  LICENSE  README.md  TUTORIAL.md  alpic.yaml  api_v2.yaml  pyproject.toml  test_client.py
mcp_pappers/: __init__.py  server.py
